--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -229,7 +229,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time">5天</span>小时
+                                    <span id="user_time">5天</span>天
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
@@ -323,7 +323,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time2">**</span>小时
+                                    <span id="user_time2">**</span>天
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
@@ -462,7 +462,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time4">5天</span>小时
+                                    <span id="user_time4">5天</span>天
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
