--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time">**</span>小时
+                                    <span id="user_time">**</span>天
                                 </div>
                                 <input type="hidden" name="orderId" id="orderId">
                                 <input type="hidden" name="companyId" id="companyId">
