--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time">*</span>小时
+                                    <span id="user_time">*</span>天
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
@@ -316,7 +316,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span id="user_time2">**</span>小时
+                                    <span id="user_time2">**</span>天
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
