全部订单跳转详情

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -461,9 +461,9 @@ function getCountry(data){
 		});
 
 }
-function orderinfo(id){
-	Public.goToOrderDetail(id)
-}
+// function orderinfo(id){
+// 	Public.goToOrderDetail(id)
+// }
 /* 订单撤销 */
 function chexiao(){
 	$.ajax({
