common.js修改内容重置筛选，无消息隐藏红点

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -213,11 +213,11 @@
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="defaultCheck24">
                             <label class="form-check-label" for="defaultCheck24">订单完成</label>
-                        </div>
+                        </div>-->
                         <div class="btn-group btn-filter d-flex justify-content-center mt-3">
                             <a href="javascript:;" role="button" class="enterFilter mr-4">确定</a>
                             <a href="javascript:;" role="button" class="resetrFilter">重置</a>
-                        </div> -->
+                        </div>
                     </div>
                 </table>
             </div>
@@ -461,9 +461,9 @@ function getCountry(data){
 		});
 
 }
-// function orderinfo(id){
-// 	Public.goToOrderDetail(id)
-// }
+function orderinfo(id){
+	Public.goToOrderDetail(id)
+}
 /* 订单撤销 */
 function chexiao(){
 	$.ajax({
