--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -25,7 +25,7 @@
                 <!-- 个人信息 -->
                 <div class="user-order d-flex justify-content-between align-items-center">
                     <div class="user-info d-flex flex-column justify-content-center">
-                        <p class="regards mb-1">您好，<span id="name">w</span>，祝你开心每一天！</p>
+                        <p class="regards">您好，<span id="name">w</span>，祝你开心每一天！</p>
                         <p class="job-title mt-2">                            
                             <span id="role"></span>
                              <span id="company"></span>
@@ -126,7 +126,7 @@
                             <div class="deal-state"> 
                             	<%for(item in orderstatus){%>
                             		 <div class="form-check">
-	                                    <input name="status" type="checkbox" class="form-check-input"  value="${item.detail_id}"> 
+	                                    <input name="status" type="checkbox" class="form-check-input"  value="${item.detail_id}">
 	                                    <label class="form-check-label" for="defaultCheck1">${item.detail_name}</label>
                                 	</div>
                                 <%}%>
@@ -303,7 +303,7 @@
 				 }
 			});
 		}
-		
+
 		
 	
 	</script>
