财务的数据表格分类，单位获取及转换

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -21,10 +21,22 @@
         .select2-container--default.select2-container--focus .select2-selection--multiple{
             border-color: #1890ff;
         }
-
+        .type10-content table{
+            border-bottom: 1px solid #dee2e6;
+            /*margin-bottom: 1.5rem;*/
+        }
+        .type10-content table td{
+            text-align: center;
+            width: 30%;
+        }
+        .type10-content table .trName{
+            width: 10rem;
+            text-align: left;
+            display: inline-block;
+        }
     </style>
 </head>
-
+<body>
 <div id="container" class="row animted fadeIn">
 
     <div class="main">
@@ -59,4 +71,5 @@
     $(function () {
     })
 </script>
+</body>
 </html>
