--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_config.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="referrer" content="no-referrer">
     <title>reported</title>
      <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/report_css/reported_basic_info.css">
