--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/bootstrap-table/css/bootstrap-table-fixed-columns.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/animate/animate.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/loadingMaster/jquery.mloading.css">
+      <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/select2/css/select2.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/reset.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/menu.css">
@@ -187,6 +188,7 @@
 	    var BASE_PATH = "${BASE_PATH }";
     </script> 
 	<script src="${BASE_PATH }static/credit/assets/jquery/jquery-2.1.0.js"></script>
+	<script src="${BASE_PATH }static/credit/assets/select2/js/select2.js"></script>
     <script src="${BASE_PATH }static/credit/assets/laydate/laydate.js"></script>
    <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
     <script src="${BASE_PATH }static/credit/assets/popper/popper.min.js"></script>
