后台报告类型编辑添加上传word功能

--- a/src/main/webapp/pages/credit/reportType/reportType_list.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_list.html
@@ -138,8 +138,8 @@
 					
 				<td title="${item.create_date!}">${item.create_date,dateFormat="yyyy-MM-dd HH:mm:ss"}</td>	
 		<td><a href="javascript:void(0);" class="btn btn-sm btn-success"
-			onclick="oper.view(${item.id});">查看</a> <a href="javascript:void(0);"
-			class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">修改</a>
+			onclick="oper.view(${item.id});">配置</a> <a href="javascript:void(0);"
+			class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">编辑</a>
 			<a href="javascript:void(0);" class="btn btn-sm btn-danger"
 			onclick="oper.del(${item.id});">删除</a></td>
 		</tr>
