报告类型上传word

--- a/src/main/webapp/pages/credit/reportType/reportType_edit.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_edit.html
@@ -40,7 +40,7 @@ var bodyContent = {
 				<tr>
 					<td>报告路径</td>
 					<td>
-					<input class="form-control" type="text" name="model.tpl_path" valid='vtext' validname='报告路径' value="${model.tpl_path }"  />
+					<input class="form-control" type="text" name="model.tpl_path" valid='vtext' validname='报告路径' value="${model.tpl_path }"  readonly="readonly" />
 					</td>
 				</tr>
 				<tr>
