详情页的财务展示

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -34,6 +34,9 @@
             text-align: left;
             display: inline-block;
         }
+        .type10-content .mulTextBox h4{
+            margin-left: 1.5rem;
+        }
     </style>
 </head>
 <body>
@@ -69,6 +72,7 @@
 
 <script>
     $(function () {
+        window.status = "详情页"
     })
 </script>
 </body>
