--- a/src/main/webapp/pages/credit/reportColumn/column_edit.html
+++ b/src/main/webapp/pages/credit/reportColumn/column_edit.html
@@ -81,12 +81,12 @@ var bodyContent = {
                 <input class="form-control" type="text" name="model.word_key"  validname='占位符(word模板)' value="${model.word_key }"  />
             </td>
         </tr>
-        <tr>
-            <td>表格形式(word模板)</td>
-            <td>
-                <input class="form-control" type="text" name="model.word_table_type"  validname='表格形式(word模板)' value="${model.word_table_type }"  />
-            </td>
-        </tr>
+        <!--<tr>-->
+            <!--<td>表格形式(word模板)</td>-->
+            <!--<td>-->
+                <!--<input class="form-control" type="text" name="model.word_table_type"  validname='表格形式(word模板)' value="${model.word_table_type }"  />-->
+            <!--</td>-->
+        <!--</tr>-->
         <tr>
             <td>排序</td>
             <td>
