表格单元格不被长网址撑开

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -36,6 +36,9 @@
         .type10-content .mulTextBox h4{
             margin-left: 1.5rem;
         }
+        table{
+            word-break: break-all;
+        }
     </style>
 </head>
 <body>
