--- a/src/main/webapp/pages/credit/reportType/reportType_edit.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_edit.html
@@ -6,13 +6,14 @@ var headContent = {
 <script type="text/javascript">
 	var oper = {
 		save:function(id){
-			if(!validForm()) {
+			/* if(!validForm()) {
 				return false;
-			}
+			} */
 			console.log(id);
 			id = id;
 			console.log(id);
-			var url = 'credit/reportType/save?id='+id;
+		    var name= $("#name").val();
+			var url = 'credit/reportType/save?id='+id+'&name='+name;
 			form1.action = url;
 			form1.submit();
 			return true;
@@ -32,7 +33,7 @@ var bodyContent = {
 				<tr>
 					<td>报告名称</td>
 					<td>
-					<input class="form-control" type="text" name="model.name" value="${model.name }"  valid='vtext' validname='报告名称'  />
+					<input class="form-control" type="text" id="name" name="model.name" value="${model.name }"  valid='vtext' validname='报告名称'  />
 					</td>
 				</tr>
 				
