--- a/src/main/webapp/pages/credit/agentmanager/agent_priceedit.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_priceedit.html
@@ -245,7 +245,7 @@ var bodyContent = {
 		<tr id="countryout" class="">
 			<td>国家</td>
 			<td>
-				<select id="country"  name="model.country"  class="form-control" multiple="multiple" style="width: 200px;">
+				<select id="country"  name="model.country"  class="form-control"  style="width: 200px;">
 				
 				</select>
 			</td>
