--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
@@ -78,8 +78,8 @@
     <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
-            <th>节点ID</th> <% // 列表头部 %>
-            <th name="smallModuleType" class="sorting">父节点类型</t>
+          <th name="t.id" class="sorting">父节点ID</t>
+            <th name="d.smallModuleType" class="sorting">父节点类型</t>
             <th name="t.temp_name" class="sorting">父节点名称</th>
             <th name="t.word_table_type" class="sorting">word模板:h标题横向 s标题竖向</th>
             <th name="t.place_hold" class="sorting">模板增加记录提示</th>
@@ -92,7 +92,6 @@
         <tbody>
         <% for(item in page.list){ %>
         <tr>
-            <td>${item.id }</td>
             <td title="${item.id!}">
                 <% if (strutil.length(item.id) >25) { %>
                     ${strutil.subStringTo(item.id, 0, 25)}...
@@ -100,13 +99,14 @@
                     ${item.id}
                 <% } %>
             </td>
-            <td title="${item.small_module_type!}">
+            <td title="${item.smallModuleType!}">
                 <% if (strutil.length(item.small_module_type) >25) { %>
                     ${strutil.subStringTo(item.small_module_type, 0, 25)}...
                 <% } else { %>
                     ${item.small_module_type}
                 <% } %>
             </td>
+
 
             <td title="${item.temp_name!}">
                 <% if (strutil.length(item.temp_name) >25) { %>
@@ -131,7 +131,6 @@
                 ${item.place_hold}
                 <% } %>
             </td>
-
             <td title="${item.sort!}">
                 <% if (strutil.length(item.sort) >25) { %>
                 ${strutil.subStringTo(item.sort, 0, 25)}...
