--- a/src/main/webapp/pages/credit/agentmanager/agent_priceedit.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_priceedit.html
@@ -225,7 +225,7 @@ var bodyContent = {
 			<td>省份</td>
 						<td>
 						<select id="sandbar" name="model.province" class="form-control"   valid="vselect" validname="省份不能为空" onchange="oper.sandbarChange()" style="width: 200px;">
-						<option value="-1" >请选择</option>
+						<option value="" >请选择</option>
 						 <% for(item in province){ %>
 						 	<% if((model.province+"")==(item.pid+"")){ %>
 							 	<option  m-type="${item.credit_province}" selected="selected" value="${item.pid}">${item.credit_province}</option>
