--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate.html
@@ -17,11 +17,11 @@
  		}
         .return_back{
             color: #A5A5A5;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
         }
         .return_back:hover{color: #A5A5A5}
-        .return_back img{display: inline-block;vertical-align: middle}
+        .return_back img{display: inline-block;vertical-align: top}
         .return_back span{padding-left: 8px}
     </style>
 </head>
