--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_edit.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_edit.html
@@ -31,9 +31,9 @@ var bodyContent = {
     <table class="table">
         <%  // 列表头部%>
         <tr>
-            <td>字段名称</td>
+            <td>父节点ID</td>
             <td>
-                <input class="form-control" type="text" name="model.temp_name" value="${model.temp_name }"  valid='vtext' validname='字段名称'  />
+                <input class="form-control" type="text" name="model.temp_name" value="${model.temp_name }"  valid='vtext' validname='父节点ID'  />
             </td>
         </tr>
         <tr>
