--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_edit.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_edit.html
@@ -30,6 +30,15 @@ var bodyContent = {
     <input type="hidden" name="model.id" value="${model.id}" />
     <table class="table">
         <%  // 列表头部%>
+        <th name="t.id" class="sorting">父节点ID</t>
+            <th name="d.small_module_type_name" class="sorting">父节点类型</t>
+            <th name="t.temp_name" class="sorting">父节点名称</th>
+               <th name="t.float_parent" class="sorting">浮动父节点ID</th>
+            <th name="t.word_table_type" class="sorting">word模板方向</th>
+            <th name="t.anchor_id" class="sorting">对应锚点的ID</th>
+            <th name="t.place_hold" class="sorting">模板增加记录提示</th>
+            <th name="t.sort" class="sorting">排序</th>
+             <th name="t.remark" class="sorting">备注</th>
         <tr>
             <td>父节点ID</td>
             <td>
