--- a/src/main/webapp/pages/credit/usercenter/passward_change.html
+++ b/src/main/webapp/pages/credit/usercenter/passward_change.html
@@ -85,7 +85,11 @@
                 </div>
             </div>-->
             <div class="row table-content">
-                <div class="bg-f pt-4" style="width:100%">
+                <div class="bg-f" style="width:100%">
+                	<p class="warning py-2">
+                		<img src="/static/credit/imgs/messages/dp.png">
+                		<span>您的密码已超过使用期限，请修改您的密码</span>
+                	</p>
                     <div class="col-md-8 offset-md-2">
                         <div class="stage">
                             <ul class="text-center nav justify-content-center">
