--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
@@ -168,7 +168,7 @@
             </td>
 
             <td>
-                <a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.peizhi(${item.id});">配置</a>
+                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.id});">配置</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">修改</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-danger" onclick="oper.del(${item.id});">删除</a>
             </td>
