--- a/src/main/webapp/pages/credit/reportType/reportType_list.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_list.html
@@ -15,6 +15,8 @@
 			},
 			view : function(id) {
 				var url = '/credit/reportNodes/list?reportType='+id;
+                $("input[name='form.orderColumn']").val("");
+                $("input[name='form.orderAsc']").val("");
 				this.form.action = url;
 				this.form.submit();
 			},
@@ -52,9 +54,8 @@
 <% }; var bodyContent = { %>
 <form name="form1" action="" method="post" class="form-inline"
 	role="form">
-	<input type="hidden" name="form.orderColumn"
-		value="${form.orderColumn!''}" /> <input type="hidden"
-		name="form.orderAsc" value="${form.orderAsc!''}" />
+	<input type="hidden" name="form.orderColumn" value="${form.orderColumn!''}" />
+    <input type="hidden" name="form.orderAsc" value="${form.orderAsc!''}" />
 	<!-- 菜单 -->
 	<% include("/pages/template/menu.html"){} %>
 
