报告节点修改

--- a/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
+++ b/src/main/webapp/pages/credit/reportNodes/reportNodes_list.html
@@ -39,6 +39,7 @@
 
             },
             peizhi : function(id) {
+            	alert(id)
                 var url = 'credit/reportColumn/list?pid='+id+"&reportType=${reportType!''}";
                 var title = '查看详细父节点';
                 //Iframe(url, this.width, this.height, title, false, false, false, EmptyFunc);
@@ -176,7 +177,7 @@
             </td>
 
             <td>
-                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.id});">配置</a>
+                <a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.peizhi(${item.table_id});">配置</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">修改</a>
                 <a href="javascript:void(0);" class="btn btn-sm btn-danger" onclick="oper.del(${item.id});">删除</a>
             </td>
