去除面包屑

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
@@ -36,7 +36,7 @@
                        <div class="bg-f">
                            <div class="form-box">
                                <form id="formSearch" class="form-inline" role="form">
-                                   <div class="input-group col-md-3 d-flex justify-content-center table-search-input">
+                                   <div class="input-group col-md-3 d-flex justify-content-center table-search-input" style="padding-left: 2.2rem">
                                        <label class="control-label" for="txt_search_reporter">报告员：</label>
                                        <input type="text" class="form-control search-input" id="txt_search_reporter" placeholder="">
                                    </div>
